--- a/Day 10/style.css
+++ b/Day 10/style.css
@@ -69,7 +69,7 @@ p {
   align-items: center;
   gap: 0.5rem;
   padding: 0.25rem;
-  border: 1px solid #2a317d7f;
+  border: solid #2a317d7f;
   border-radius: 0.25rem;
 }
 
@@ -77,16 +77,19 @@ p {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   margin-top: 0.5rem;
+  border-width: 1px 1px 0.2px 1px;
 }
 .code {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   border-bottom-left-radius: 0;
+  border-width: 0.2px 1px 1px 0.2px;
 }
 .card-time {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+  border-width: 0.2px 0.2px 1px 1px;
 }
 
 .code input {
@@ -104,6 +107,11 @@ p {
 input {
   border: none;
   outline: none;
+}
+
+::placeholder {
+  color: #2a317d;
+  font-size: 0.6rem;
 }
 
 .card-details {
